sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/Work_Order_Receipts__c.object-meta.xml
<CustomObject>
    <label>Work Order Receipt</label>
    <nameField>
        <displayFormat>WORCPT-{000000}</displayFormat>
        <label>Work Order Receipts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>