sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <formula>Inventory_Transaction__r.Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item</label>
    <type>Text</type>
</CustomField>