sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Inventory_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Transaction</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Work Order Receipts</relationshipLabel>
    <relationshipName>Work_Order_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>