sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Primary_Item_in_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Item_in_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this item is the Primary Item in Work Order</description>
    <inlineHelpText>Checked if this item is the Primary Item in Work Order</inlineHelpText>
    <label>Primary Item in Work Order</label>
    <type>Checkbox</type>
</CustomField>