sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Receive_Location__c.field-meta.xml
<CustomField>
    <fullName>Receive_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receive Location</label>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Work Order Receipts</relationshipLabel>
    <relationshipName>Work_Order_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>