sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Receive_Lot__c.field-meta.xml
<CustomField>
    <fullName>Receive_Lot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receive Lot</label>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Work Order Receipts</relationshipLabel>
    <relationshipName>Work_Order_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>