sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Receive_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Receive_Quantity__c</fullName>
    <label>Receive Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>