sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Receive_Site__c.field-meta.xml
<CustomField>
    <fullName>Receive_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receive Site</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Work Order Receipts</relationshipLabel>
    <relationshipName>Work_Order_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>