sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/UOM_Conversion__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>UOM Conversion</label>
    <referenceTo>Inventory_UOM_Conversion__c</referenceTo>
    <relationshipLabel>Work Order Receipts</relationshipLabel>
    <relationshipName>Work_Order_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>