sfSandBoxCode/force-app/main/default/objects/Work_Order_Receipts__c/fields/Work_Order_Receipt_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Receipt_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this Work Order Receipt has been reversed</description>
    <inlineHelpText>Checked if this Work Order Receipt has been reversed</inlineHelpText>
    <label>Work Order Receipt Reversal</label>
    <type>Checkbox</type>
</CustomField>